--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,11 @@ PyPDF2==3.0.1
 python-dotenv==1.0.0
 streamlit==1.18.1
 openai==0.27.6
-faiss-cpu==1.7.4
+# faiss-cpu==1.7.4
+--find-links https://github.com/facebookresearch/faiss/releases/tag/v1.7.4
+faiss-cpu
 altair==4
+setuptools-rust
 tiktoken==0.4.0
 # uncomment to use huggingface llms
 # huggingface-hub==0.14.1
